# xrepo

./: .cz-config.cjs  .gitignore  .prettierrc.cjs  README.md  commitlint.config.mjs  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: sync-to-gitee.yml
.husky/: commit-msg  pre-commit
apps/demo-docs/: package.json
apps/demo-web/: package.json
apps/docs/: .gitignore  docker-compose.yml  nginx.conf  package.json  xrepo-start.md
apps/meta-mind/: .gitignore  README.md  package.json  pyproject.toml
apps/meta-mind/model/: model-scope.py
apps/meta-mind/src/: main.py
apps/meta-mind/src/core/: config.py  milvus.py  redis.py
apps/meta-mind/src/modules/assistant/: agent.py  router.py  service.py
apps/meta-mind/src/modules/assistant/tools/: date.py  huangli.py
apps/meta-mind/src/modules/llm/: embeddings.py  router.py  service.py
apps/meta-mind/src/modules/llm/agents/: assistant.py  weather.py
apps/meta-mind/src/modules/news/: agent.py  constants.py  dal.py  listener.py  model.py  router.py  service.py
apps/meta-mind/src/utils/: embeddings.py
apps/meta-mind/test/: test.json  test_agent.py  test_milvus.py  test_sub.py
apps/news-spider-cave/: .cz-config.cjs  .gitignore  .prettierrc.cjs  CHANGELOG.md  README.md  docker-compose.yml  framework.drawio  package.json  pnpm-lock.yaml
apps/servant/: .gitignore  README.md  docker-compose.yml  package.json  pom.xml  架构.drawio
apps/spider-cave/: .eslintrc.js  README.md  commitlint.config.mjs  package.json
ops/: docker-compose.yml
ops/docs/: Dockerfile
ops/entry/: nginx.conf  (+2 more)
(+1087 files in other folders)
