[project]
name = "meta-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioredis>=2.0.1",
    "fastapi[standard]>=0.123.7",
    "ollama>=0.6.1",
    "pydantic-settings>=2.12.0",
    "pymilvus>=2.6.4",
    "ruff>=0.14.7",
]
